--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
   "engines": {
     "vscode": "^1.80.0"
   },
-  "extensionDependencies": [
-    
-  ],
-  "license":"MIT",
+  "extensionDependencies": [],
+  "license": "MIT",
   "categories": [
     "Other"
   ],
@@ -28,22 +26,22 @@
     ]
   },
   "scripts": {
-	"clean": "rimraf dist",
-	"nls": "npx @vscode/l10n-dev export --outDir ./l10n ./src",
-	"build": "npm run clean && webpack --mode development",
-	"watch": "npm run clean && webpack --mode development --watch",
-	"vscode:prepublish": "npm run clean && webpack --mode production --devtool hidden-source-map",
-	"package": "vsce package --pre-release"
+    "clean": "rimraf dist",
+    "nls": "npx @vscode/l10n-dev export --outDir ./l10n ./src",
+    "build": "npm run clean && webpack --mode development",
+    "watch": "npm run clean && webpack --mode development --watch",
+    "vscode:prepublish": "npm run clean && webpack --mode production --devtool hidden-source-map",
+    "package": "vsce package --pre-release"
   },
   "devDependencies": {
-    "rimraf": "^5",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "@types/vscode": "^1.80.0",
-    "@types/node": "18.x", 
-    "typescript": "^5.2.2",
-    "esbuild-loader": "^3.0.1",
-    "webpack": "^5.89.0",
+    "@types/node": "^18.19.10",
+    "@types/vscode": "1.80.0",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "esbuild-loader": "^3.2.0",
+    "rimraf": "^5.0.5",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
   }
 }
