--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "vscode-extension-template",
   "publisher": "?",
   "displayName": "VSCode Extension Template",
-  "description": "This is my template.",
+  "description": "This is my template. Powered by Code for IBM i.",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.80.0"
   },
-  "extensionDependencies": [],
+  "extensionDependencies": [
+    "HalcyonTechLtd.code-for-ibmi"
+  ],
   "license": "MIT",
   "categories": [
     "Other"
@@ -34,6 +36,7 @@
     "package": "vsce package --pre-release"
   },
   "devDependencies": {
+    "@halcyontech/vscode-ibmi-types": "^2.6.5",
     "@types/node": "^18.19.10",
     "@types/vscode": "1.80.0",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
