--- a/package.json
+++ b/package.json
@@ -28,21 +28,19 @@
     ]
   },
   "scripts": {
-    "clean": "rimraf dist",
     "nls": "npx @vscode/l10n-dev export --outDir ./l10n ./src",
-    "build": "npm run clean && webpack --mode development",
-    "watch": "npm run clean && webpack --mode development --watch",
-    "vscode:prepublish": "npm run clean && webpack --mode production --devtool hidden-source-map",
+    "build": "webpack --mode development",
+    "watch": "webpack --mode development --watch",
+    "vscode:prepublish": "webpack --mode production --devtool hidden-source-map",
     "package": "vsce package --pre-release"
   },
   "devDependencies": {
-    "@halcyontech/vscode-ibmi-types": "^2.15.3",
+    "@halcyontech/vscode-ibmi-types": "^2.16",
     "@types/node": "^20",
     "@types/vscode": "1.93",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "esbuild-loader": "^4.3.0",
-    "rimraf": "^5",
     "typescript": "^5.8.2",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
