--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "This is my template.",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.93.0"
+    "vscode": "^1.104.x"
   },
   "extensionDependencies": [],
   "license": "MIT",
@@ -33,13 +33,13 @@
     "package": "npx @vscode/vsce package --pre-release"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/vscode": "1.93",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "esbuild-loader": "^4.3.0",
-    "typescript": "^5.8.2",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
+    "@types/node": "^22",
+    "@types/vscode": "1.104",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "esbuild-loader": "4.3.0",
+    "typescript": "5.9.2",
+    "webpack": "5.101.3",
+    "webpack-cli": "6.0.1"
   }
 }
