--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
   },
   "devDependencies": {
     "@halcyontech/vscode-ibmi-types": "^2.16",
-    "@types/node": "^20",
-    "@types/vscode": "1.93",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "esbuild-loader": "^4.3.0",
-    "typescript": "^5.8.2",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
+    "@types/node": "^22",
+    "@types/vscode": "1.104",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "esbuild-loader": "4.3.0",
+    "typescript": "5.9.2",
+    "webpack": "5.101.3",
+    "webpack-cli": "6.0.1"
   }
 }
